fix: DFS works for all direction orders

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
             },
             "args": [
                 "dfs",
-                "LDRU",
+                "DRUL",
                 "puzzle.txt",
                 "output.txt",
                 "stats.txt"
