feat: optimized memory storage

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
             },
             "args": [
                 "dfs",
-                "DRUL",
+                "LUDR",
                 "puzzle.txt",
                 "output.txt",
                 "stats.txt"
