feat: various improvements

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
             },
             "args": [
                 "astr",
-                "hamm",
+                "manh",
                 "puzzle.txt",
                 "output.txt",
                 "stats.txt"
